@@ -99,6 +99,18 @@ public:
 	 */
 	void AddPath(AllocatedPath &&path);
 
+#ifdef __linux__
+	/**
+	 * Add a listener on an abstract local socket (Linux specific).
+	 *
+	 * Throws on error.
+	 *
+	 * @param name the abstract socket name, starting with a '@'
+	 * instead of a null byte
+	 */
+	void AddAbstract(const char *name);
+#endif
+
 	/**
 	 * Add a socket descriptor that is accepting connections.  After this
 	 * has been called, don't call server_socket_open(), because the
